刪除不必要的程式&整理

--- a/view/api_and_script_page.html
+++ b/view/api_and_script_page.html
@@ -15,7 +15,7 @@
               <label for="API">API：</label>
             </div>
             <div style="display: inline-block;">
-              <select class="form-control" id="API">
+              <select class="form-control" name="API" id="API">
                 <option value="Login" selected="selected">Login</option>
                 <option value="SetPoints">SetPoints</option>
                 <option value="KickOut">KickOut</option>
@@ -29,7 +29,7 @@
                 <label for="LanguageID">語　　系：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control LanguageID" style="width: 200px;" id="LanguageID"> </select> 
+                <select class="form-control LanguageID" style="width: 200px;" name="LanguageID" id="LanguageID"> </select> 
               </div>
             </div> 
 
@@ -38,7 +38,7 @@
                 <label for="Wallet">錢　　包：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control" style="width: 200px;" id="Wallet"> 
+                <select class="form-control" style="width: 200px;" name="Wallet" id="Wallet"> 
                   <option id="seamlessWallet">單一錢包</option>
                   <option id="transferWallet">轉帳錢包</option>
                 </select>
@@ -50,7 +50,7 @@
                 <label for="Currency">幣　　別：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control Currency" style="width: 200px;" id="Currency"> </select> 
+                <select class="form-control Currency" style="width: 200px;" name="Currency" id="Currency"> </select> 
               </div>
             </div> 
           </div>
@@ -61,7 +61,7 @@
                 <label for="GameID">遊戲名稱：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control GameID" style="width: 200px;" id="GameID"> </select> 
+                <select class="form-control GameID" style="width: 200px;" name="GameID" id="GameID"> </select> 
               </div>  
             </div> 
 
@@ -70,7 +70,7 @@
                 <label for="Points">點　　數：</label> 
               </div>
               <div style="display: inline-block;">
-                <input class="form-control" id="Points"> 
+                <input class="form-control" name="Points" id="Points"> 
               </div>
             </div>
   
@@ -79,7 +79,7 @@
                 <label for="AgentCode">商戶代碼：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control" style="width: 200px;" id="AgentCode"> </select> 
+                <select class="form-control" style="width: 200px;" name="AgentCode" id="AgentCode"> </select> 
               </div>
             </div> 
           </div>
@@ -90,7 +90,7 @@
                 <label for="MemberAccount">帳　　號：</label> 
               </div>
               <div style="display: inline-block;">
-                <input class="form-control" style="width: 200px;" placeholder="多個帳號請用,分隔(半形)" id="MemberAccount" aria-required="true" required> 
+                <input class="form-control" style="width: 200px;" placeholder="多個帳號請用,分隔(半形)" name="MemberAccount" id="MemberAccount" aria-required="true" required> 
               </div>
             </div>
   
@@ -112,7 +112,7 @@
                   </label>
                 </div>
                 <div style="display: inline-block;">
-                  <select class="form-control" id="Event" disabled="disabled"></select>
+                  <select class="form-control" name="Event" id="Event" disabled="disabled"></select>
                 </div>
               </div>
             </div>
@@ -124,7 +124,7 @@
               <label for="other">其他參數：</label> 
             </div>
             <div style="display: inline-block;">
-              <input class="form-control" placeholder="key:value,key2:value2" style="width: 510px;" id="other" > 
+              <input class="form-control" placeholder="key:value,key2:value2" style="width: 510px;" name="other" id="other" > 
             </div>
             
           </div>
@@ -135,7 +135,7 @@
                 <label for="list">腳　　本：</label> 
               </div>
               <div style="display: inline-block;">
-                <select class="form-control" id="list"></select>
+                <select class="form-control" name="list" id="list"></select>
               </div>
             </div>
 
@@ -151,7 +151,7 @@
                   </label>
                 </div>
                 <div style="display: inline-block;">
-                  <input class="form-control"  id="multipleMin" placeholder="分鐘" aria-required="true" required> 
+                  <input class="form-control" name="multipleMin" id="multipleMin" placeholder="分鐘" aria-required="true" required> 
                 </div>
               </div>
               <div class="form-check" style="display: inline-block; margin-left: 10px;">
