--- a/view/betrecord_script_setup_page.html
+++ b/view/betrecord_script_setup_page.html
@@ -59,14 +59,14 @@
                     </tbody>
                 </table>
             </div>
-            <!-- 值區塊 -->
+            <!-- 爬蟲區塊 -->
             <input type="radio" class="tabs__radio" name="tabs" id="value">
-            <label for="value" class="tabs__label">設定值</label>
+            <label for="value" class="tabs__label">設定爬蟲</label>
             <div class="tabs__content" style="margin-top: 50px; position: absolute;">
                 <ul class="nav" style="position: relative; float: left;">
                     <li class="nav-item">
                         <button type="button" class="btn btn-primary" style="margin: 10px" data-toggle="modal" data-target="#Modal2" id="clickModal2">
-                            <span class="fas fa-plus"></span>新增值
+                            <span class="fas fa-plus"></span>新增爬蟲
                         </button>
                     </li>
                 </ul>
@@ -138,12 +138,12 @@
         </div>
     </div>
 
-    <!-- 新增值的modal -->
+    <!-- 新增爬蟲的modal -->
     <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-hidden="true" >
         <div class="modal-dialog modal-xl modal-dialog-centered" style="max-width: 100%; padding: 17px;">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">新增值</h5>
+                    <h5 class="modal-title">新增爬蟲</h5>
                 </div>
                 <form>
                     <div class="modal-body">
