--- a/view/hang_up_script_setup_page.html
+++ b/view/hang_up_script_setup_page.html
@@ -47,13 +47,13 @@
       <thead>
         <tr>
           <th scope="col">#</th>
-          <th scope="col">腳本名稱</th>
+          <th scope="col">掛機腳本名稱</th>
           <th scope="col">匯出</th>
           <th scope="col">編輯</th>
           <th scope="col">刪除</th>
         </tr>
       </thead>
-      <tbody id="table">
+      <tbody id="showTable">
       </tbody >
     </table>
   </div>
