--- a/view/index.html
+++ b/view/index.html
@@ -39,7 +39,7 @@
                             <a class="dropdown-item" onclick ='changeUrl("path_setup_page.html")'>路徑設定</a>
                         </div>
                     </li>
-                    <a class="nav-item nav-link" onclick = 'changeUrl("help_page.html")'>說明</a>
+                    <span style="color: blanchedalmond; font-size: 12px; align-self: flex-end;">說明文件請參照Confluence</span>
                 </div>
 
             </div>
