--- a/view/betrecord_page.html
+++ b/view/betrecord_page.html
@@ -47,10 +47,10 @@
           <div>
             <div class="form-group" style="display: inline-block; margin-right: 15px; width: 700px;"> 
               <div style="display: inline-block;">
-                <span class="text-danger" style="font-size: 20px;">*</span><label for="IgnoreGameMode">IgnoreGameMode：</label> 
+                <label for="IgnoreGameMode">IgnoreGameMode：</label> 
               </div>
               <div style="display: inline-block; width: 500px;">
-                <input class="form-control" placeholder="請輸入GameMode編號(用,分隔)" name="IgnoreGameMode" id="IgnoreGameMode" aria-required="true" required>
+                <input class="form-control" placeholder="請輸入GameMode編號(用,分隔)" name="IgnoreGameMode" id="IgnoreGameMode">
               </div>
             </div>
           </div>
